# SplatRs

./: .gitignore  AGENTS.md  BUGS_FOUND.md  CODE_REVIEW_SUMMARY.md  Cargo.toml  FIXES_APPLIED.md  MILESTONE_READINESS.md  Makefile  README_FIXES.md  REVIEW_COMPLETE.md  TESTING.md  TEST_REORGANIZATION.md  build.rs  llvm-cov.toml  t.txt  t1.txt  tauri.conf.json  test_bad_seed.sh  test_image_roundtrip.rs
docs/: COVERAGE.md  DOCUMENTATION.md  FOUNDATION_PLAN.md  GPU_GRADIENTS_DESIGN.md  M10_INFRASTRUCTURE_PLAN.md  M11_COMPLETE.md  M11_GPU_DESIGN.md  M12_PROGRESS.md  PROFILING.md  QUALITY.md  ROADMAP.md  sugar-rs-architecture.md  sugar-rs-milestones.md  sugar-rust-roadmap.md
examples/: test_downsampling.rs  train_gpu_benchmark.rs
scripts/: profile-training.sh
src/: lib.rs
src/core/: camera.rs  color.rs  gaussian.rs  init.rs  math.rs  mod.rs  sh.rs
src/diff/: blend_grad.rs  covariance_grad.rs  gaussian2d_grad.rs  math_grad.rs  mod.rs  project_grad.rs  quaternion_grad.rs  sh_grad.rs
src/gpu/: backward.wgsl  buffers.rs  context.rs  gradients.rs  mod.rs  project_backward.wgsl  rasterize.wgsl  renderer.rs  shaders.rs  sort.rs  sort.wgsl  types.rs
src/io/: colmap.rs  color_management.rs  mod.rs  model.rs  obj.rs  ply.rs
src/optim/: adam.rs  loss.rs  mod.rs  trainer.rs
src/render/: full.rs  full_diff.rs  mod.rs  simple.rs
src/sugar/: mod.rs
src/viewer/: commands.rs  state.rs
test_e2e/: model.gs
tests/: dataset_sanity_check.rs  debug_colors.rs  gpu_background_gradient_debug.rs  gpu_deterministic_rendering.rs  gpu_forward_only_debug.rs  gpu_full_backward_debug.rs  gpu_gradients.rs  gpu_gradients_debug.rs  gpu_projection_backward_debug.rs  gpu_render_comparison.rs  gpu_types_test.rs  gradient_check.rs  io_ply_test.rs  m11_gpu_renderer.rs  m1_colmap_load.rs  m2_project_points.rs  m3_render_spheres.rs  m4_render_gaussians.rs  m5_sh_view_dependent.rs  m7_overfit_color_only.rs  m7_overfit_color_only_tandt.rs  m8_multiview_train.rs  m8_position_grad_smoke.rs  m8_rotation_grad_smoke.rs  m8_scale_grad_smoke.rs  m9_adaptive_density_control.rs  renderer_edge_cases_test.rs  test_color_conversion.rs  test_color_render.rs  test_downsample_quality.rs  test_image_loading.rs  test_jpg_to_png.rs  test_png_encoding.rs  unit_gpu_blend_ordering.rs  unit_gpu_chain_2d_to_3d.rs  unit_gpu_projection_invariants.rs  unit_math_invariants.rs
ui/: app.js  camera-controller.js  index.html  styles.css
