[package]
name = "sugar-rs"
version = "0.1.0"
edition = "2021"
authors = ["Austin King <shout@ozten.com>"]
description = "SuGaR (Surface-Aligned Gaussian Splatting) implementation in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ozten/SplatRs"

[lib]
name = "sugar_rs"
path = "src/lib.rs"

# Binary targets (CLI tools)
[[bin]]
name = "sugar-train"
path = "src/bin/train.rs"
required-features = []

[[bin]]
name = "sugar-render"
path = "src/bin/render.rs"
required-features = []

[[bin]]
name = "sugar-extract"
path = "src/bin/extract.rs"
required-features = []

[dependencies]
# Linear algebra - matrices, vectors, quaternions
nalgebra = { version = "0.33", features = ["serde-serialize"] }

# Image I/O
image = "0.25"

# Parallel iteration
rayon = "1.10"

# Binary file parsing (for COLMAP)
byteorder = "1.5"

# Serialization (for checkpoints, PLY export)
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# KD-tree for neighbor queries (needed for SuGaR phase)
# We'll add this later when we reach M11
# kiddo = "2.0"

# GPU support (optional, for M13-M14)
[features]
gpu = ["wgpu", "pollster"]

[dependencies.wgpu]
version = "0.19"
optional = true

[dependencies.pollster]
version = "0.3"
optional = true

[dev-dependencies]
# Float comparison in tests
approx = "0.5"

# For generating test data
rand = "0.8"

[profile.dev]
# Faster debug builds (helpful for iterative development)
opt-level = 1

[profile.release]
# Maximum optimization for production
opt-level = 3
lto = true
codegen-units = 1
